# FastDate

./: Dockerfile  Makefile  README.md  config.py  db.py  docker-compose-FastDate.yaml  language.py  main.py  pyproject.toml  requerements.txt
doks/: About.md  Tasks.md
handlers/: matching.py  registration.py  support.py
models/: customer.py  matching.py  registration.py
support/: keyboards.py  language.py  translate.py
